fix: filter overflow

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -158,6 +158,8 @@ input[type="range"]
         flex-basis: auto
     &.icons
       flex-basis: auto !important
+    &.titleSearch
+      flex-basis: auto !important
   &-Icons
     display: flex
     height: 100%
